added project specs default css

--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
         <title>TCP Coding Challenge</title>
         <meta charset="UTF-8" />
         <meta name="description" content="coding challenge assignment">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-    <article>
-        <section>
-            <h1>Week 0 Class Work</h1>
-            <ul id="list1">
-                <li>Box 1</li>
-                <li>Box 2</li>
-                <li>Box 3</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Change Buttons</h2>
-            <ul id="list2">
-                <li><button>Change Box 1</button></li>
-                <li><button>Change Box 2</button></li>
-                <li><button>Change Box 3</button></li>
-                <li><button>Change All</button></li>
-            </ul>
-        </section>
-        <section>
-            <h3>Hide Buttons</h3>
-            <ul id="list3">
-                <li><button>Hide Box 1</button></li>
-                <li><button>Hide Box 2</button></li>
-                <li><button>Hide Box 3</button></li>
-                <li><button>Hide All</button></li>
-            </ul>
-        </section>
-        <section>
-            <ul id="list4">
-                <li><button>Reset Colors</button></li>
-                <li><button>Show All</button></li>
-            </ul>
-        </section>
-    </article>
+        <article>
+            <section>
+                <h1>Week 0 Class Work</h1>
+                <ul id="list1">
+                    <li id="box1"></li>
+                    <li id="box2"></li>
+                    <li id="box3"></li>
+                </ul>
+            </section>
+            <section>
+                <h2>Change Buttons</h2>
+                <ul id="list2">
+                    <li><button>Change Box 1</button></li>
+                    <li><button>Change Box 2</button></li>
+                    <li><button>Change Box 3</button></li>
+                    <li><button>Change All</button></li>
+                </ul>
+            </section>
+            <section>
+                <h3>Hide Buttons</h3>
+                <ul id="list3">
+                    <li><button>Hide Box 1</button></li>
+                    <li><button>Hide Box 2</button></li>
+                    <li><button>Hide Box 3</button></li>
+                    <li><button>Hide All</button></li>
+                </ul>
+            </section>
+            <section>
+                <ul id="list4">
+                    <li><button>Reset Colors</button></li>
+                    <li><button>Show All</button></li>
+                </ul>
+            </section>
+        </article>
     </body>
 </html>
